Added $templatePath variable
Currently used inside the border-box extend at the .htc file path wich
has to be relative to the html document

--- a/Assets/_scss/generic/_shared.scss
+++ b/Assets/_scss/generic/_shared.scss
@@ -35,7 +35,7 @@
   @include box-sizing(border-box);
   @if $oldIE == true {
     /* URL has to be relative to the HTML Doc */
-    *behavior: url('Assets/js/boxsizing.htc');
+    *behavior: url('#{$templatePath}Assets/boxsizing.htc');
   }
 }
 
