Add initial-scale=1" to the meta viewport tag
As the zoom on rotation bug is fixed in iOS6

--- a/Layouts/index.html
+++ b/Layouts/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<!-- RWD: <meta name="viewport" content="width=device-width"> -->
+        <!-- RWD: <meta name="viewport" content="width=device-width" initial-scale=1"> -->
 
 	<link rel="stylesheet" href="../Assets/css/main.css">
 	<script src="../Assets/js/vendor/modernizr-2.6.2.min.js"></script>
