Scope navigation styles to anchors with a link

--- a/Assets/_scss/objects/_navigations.scss
+++ b/Assets/_scss/objects/_navigations.scss
@@ -55,13 +55,13 @@ $ Navigations
 /* ======================== Main Navigation ========================= */
 /*.nav*/.site-nav {
   li { }
-  a { }
+  a:link { }
   .active a { }
 }
 
 /* ======================== Footer Navigation ======================== */
 /*.nav*/.footer-nav {
   li { }
-  a { }
+  a:link { }
   .active a { }
 }
