--- a/Assets/_scss/objects/_t3-general.scss
+++ b/Assets/_scss/objects/_t3-general.scss
@@ -9,7 +9,7 @@
 /* =============================================================================
 $ General stylings
 ================================================================================ */
-.csc-textpic-caption { font-size: $baseFontSize - 3+px; }
+.csc-textpic-caption { @include font-size(($baseFontSize - 3)); }
 
 /* Fixes an TYPO3 IE8 float issue where images have no width */
 .csc-textpic-imagecolumn img { max-width: none; }
