--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -23,6 +23,7 @@ $templatePath:          "fileadmin/templates/TemplateName/"; // Relative to the 
 $responsive:            false;  // If set to 'true' CSS-Viewport-Rules are added
 $oldIE:                 true;   // If set to 'false' IE6 & IE7 Hacks will be ignored while compiling
 $direction:             ltr;    // set "dir" attribute in HTML to "ltr" (default) or "rtl"
+$debug-mode:            false;  // If set to 'true' a basic markup check via CSS will be injected
 
 
 // =============================================================================
