--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -51,3 +51,4 @@
 // =============================================================================
 @import "generic/_helper";            // Helper classes for developement
 @import "generic/_print";             // Print styles
+@import "generic/_debug";             // CSS Debug rules
