Fixed the example-grid markup

--- a/Layouts/index.html
+++ b/Layouts/index.html
@@ -33,11 +33,11 @@
 	<div class="wrapper">
 
 		<div class="row clearfix">
-			<div class="columns--first columns--three columns"> </div>
+			<div class="columns--first columns--three"> </div>
 
-			<div class="six columns"> </div>
+			<div class="columns--six"> </div>
 
-			<div class="columns--last columns--three columns"> </div>
+			<div class="columns--last columns--three"> </div>
 		</div>
 
 	</div>
