Set top and bottom margins for <blockquote>

--- a/Assets/_scss/base/_typography.scss
+++ b/Assets/_scss/base/_typography.scss
@@ -103,6 +103,10 @@ q {
     }
   }
 }
+blockquote {
+  @extend %sass-margin-top;
+  @extend %sass-margin-bottom;
+}
 
 
 /* =============================================================================
