--- a/Assets/_scss/base/_links.scss
+++ b/Assets/_scss/base/_links.scss
@@ -22,6 +22,8 @@ a:link {
   &:focus {
     /* Addresses `outline` inconsistency between Chrome and other browsers. */
     outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -1px;
   }
   &:active,
   &:hover {
