Add support for "user-zoom" to the viewport mixin

--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -142,36 +142,41 @@
 //
 // DOCS: http://dev.w3.org/csswg/css-device-adapt/
 // =============================================================================
-@mixin viewport($width: '', $height: '', $zoom: '', $orientation: '') {
+@mixin viewport($width: '', $height: '', $zoom: '', $orientation: '', $user-zoom: '') {
   @-webkit-viewport {
     @if $width != '' { width: $width; }
     @if $height != '' { height: $height; }
     @if $zoom != '' { zoom: $zoom; }
     @if $orientation != '' { orientation: $orientation; }
+    @if $user-zoom != '' { user-zoom: $user-zoom; }
   }
   @-moz-viewport {
     @if $width != '' { width: $width; }
     @if $height != '' { height: $height; }
     @if $zoom != '' { zoom: $zoom; }
     @if $orientation != '' { orientation: $orientation; }
+    @if $user-zoom != '' { user-zoom: $user-zoom; }
   }
   @-ms-viewport {
     @if $width != '' { width: $width; }
     @if $height != '' { height: $height; }
     @if $zoom != '' { zoom: $zoom; }
     @if $orientation != '' { orientation: $orientation; }
+    @if $user-zoom != '' { user-zoom: $user-zoom; }
   }
   @-o-viewport {
     @if $width != '' { width: $width; }
     @if $height != '' { height: $height; }
     @if $zoom != '' { zoom: $zoom; }
     @if $orientation != '' { orientation: $orientation; }
+    @if $user-zoom != '' { user-zoom: $user-zoom; }
   }
   @viewport {
     @if $width != '' { width: $width; }
     @if $height != '' { height: $height; }
     @if $zoom != '' { zoom: $zoom; }
     @if $orientation != '' { orientation: $orientation; }
+    @if $user-zoom != '' { user-zoom: $user-zoom; }
   }
 }
 
