--- a/Assets/_scss/generic/_normalize.scss
+++ b/Assets/_scss/generic/_normalize.scss
@@ -2,7 +2,7 @@
   /* =============================================================================
   $ CSS Viewport
   ================================================================================ */
-  @include viewport($width: device-width, $zoom: 1, $orientation: '');
+  @include viewport($width: device-width, $zoom: 1, $orientation: '', $user-zoom: '');
 }
 
 // ==========================================================
