--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -152,14 +152,14 @@ legend {
 /* =============================================================================
 $ Secific forms
 ================================================================================ */
-/* ========================= Searchform ======================== */
-/*form*/.searchform {
-  label { }
-  input { }
-  input[type="search"],
-  input[type="text"] {
-    /* type="text" is used as a fallback for IE7 because it doesn't recognize type="search" */
-
-  }
-  input[type="submit"] { }
-}
+// /* ========================= Searchform ======================== */
+// /*form*/.searchform {
+//   label { }
+//   input { }
+//   input[type="search"],
+//   input[type="text"] {
+//     /* type="text" is used as a fallback for IE7 because it doesn't recognize type="search" */
+//
+//   }
+//   input[type="submit"] { }
+// }
