Disable CSS Viewports until a proper solution is found for the WP8 viewport bug

--- a/Assets/_scss/generic/_normalize.scss
+++ b/Assets/_scss/generic/_normalize.scss
@@ -1,9 +1,9 @@
-@if $responsive == true {
-  /* =============================================================================
-  $ CSS Viewport
-  ================================================================================ */
-  @include viewport($width: device-width, $zoom: 1, $orientation: '', $user-zoom: '');
-}
+// @if $responsive == true {
+//   /* =============================================================================
+//   $ CSS Viewport
+//   ================================================================================ */
+//   @include viewport($width: device-width, $zoom: 1, $orientation: '', $user-zoom: '');
+// }
 
 // ==========================================================
 /* § /generic/normalize.scss */
