Set the _debug file as an optional module in the import queue

--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -51,4 +51,4 @@
 // =============================================================================
 @import "generic/_helper";            // Helper classes for developement
 @import "generic/_print";             // Print styles
-@import "generic/_debug";             // CSS Debug rules
+// @import "generic/_debug";             // CSS Debug rules
