Add a file-header comment for _variables.scss

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -1,7 +1,7 @@
 // ==========================================================
 // variables.scss
 //
-// Merges all listed stylesheets and does the SASS & Compass magic
+// Variables, variables, variables!
 // DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
 // ==========================================================
 //
