Remove the :link subselector as it leads to some uncommon problems

--- a/Assets/_scss/base/_links.scss
+++ b/Assets/_scss/base/_links.scss
@@ -9,7 +9,7 @@
 /* =============================================================================
 $ Links
 ================================================================================ */
-a:link {
+a {
   color: $linkColor;
   text-decoration: none;
 
