Change the file-header structure to the phpDoc scheme
To have a consistent file-header accross the extension (further
developement), the phpDoc file-header scheme is inherited to teh SASS
part. This includes that all file-headers are set to !important to
include them in the :compressed mode as well.

--- a/Ressources/Private/Sass/_settings/_functions.scss
+++ b/Ressources/Private/Sass/_settings/_functions.scss
@@ -1,9 +1,11 @@
-// ==========================================================
-// functions.scss
 //
-// Functions - thats all.
-// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#function_directives
-// ==========================================================
+// SASS Functions
+//
+// @package t3b_frontend
+// @path  _settings/_functions.sass
+// @author Tyll Weiß <t.weiss@exinit.de>
+// @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#function_directives
+//
 
 
 // =============================================================================
