--- a/Ressources/Private/Sass/_settings/_mixins.scss
+++ b/Ressources/Private/Sass/_settings/_mixins.scss
@@ -1,9 +1,11 @@
-// ==========================================================
-// mixins.scss
 //
-// Mixins to develope faster
-// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#mixins
-// ==========================================================
+// SASS Mixins
+//
+// @package nk_common
+// @path settings/_mixins.scss
+// @author Tyll Weiß <t.weiss@exinit.de>
+// @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#mixins
+//
 
 
 // =============================================================================
