--- a/Ressources/Private/Sass/base/_base.scss
+++ b/Ressources/Private/Sass/base/_base.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /base/base.scss */
-//
-// Basic styling for this site (f.e. Header and Footer)
-// DOCS:
-// ==========================================================
+/*!
+ * High-level wrapper elements, logos and CI related stuff
+ *
+ * @package t3b_frontend
+ * @path base/_base.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
