--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /base/forms.scss */
-//
-// Basic styling for forms and inputs
-// DOCS:
-// ==========================================================
+/*!
+ * Basic styling for forms and inputs
+ *
+ * @package t3b_frontend
+ * @path base/_forms.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
