--- a/Ressources/Private/Sass/base/_headings.scss
+++ b/Ressources/Private/Sass/base/_headings.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /base/headings.scss */
-//
-// Styling for Headings and Sub-Headings
-// DOCS:
-// ==========================================================
+/*!
+ * Basic styling for headings and sub-headings
+ *
+ * @package t3b_frontend
+ * @path base/_headings.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
