--- a/Ressources/Private/Sass/base/_lists.scss
+++ b/Ressources/Private/Sass/base/_lists.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /base/lists.scss */
-//
-// Basic styling for typography elements
-// DOCS:
-// ==========================================================
+/*!
+ * Basic styling for lists and definition elements
+ *
+ * @package t3b_frontend
+ * @path base/_lists.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
