--- a/Ressources/Private/Sass/base/_media.scss
+++ b/Ressources/Private/Sass/base/_media.scss
@@ -1,9 +1,11 @@
-// ==========================================================
-/* § /base/media.scss */
-//
-// Basic styling for media elements e.g. Images, Video & Audio
-// DOCS:
-// ==========================================================
+/*!
+ * Basic styling for media elements e.g.
+ * <img>, <video>, <svg>, <augio>
+ *
+ * @package t3b_frontend
+ * @path base/_media.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
