--- a/Ressources/Private/Sass/base/_tables.scss
+++ b/Ressources/Private/Sass/base/_tables.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /base/tables.scss */
-//
-// Basic styling for tables
-// DOCS:
-// ==========================================================
+/*!
+ * Basic styling and extended classes for tables
+ *
+ * @package t3b_frontend
+ * @path base/_tables.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
