--- a/Ressources/Private/Sass/generic/_grid.scss
+++ b/Ressources/Private/Sass/generic/_grid.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /generic/grid.scss */
-//
-// Sets up the grid
-// DOCS:
-// ==========================================================
+/*!
+ * Gernerated- & Helper-classes for a column based grid
+ *
+ * @package t3b_frontend
+ * @path generic/_grid.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 // =============================================================================
