--- a/Ressources/Private/Sass/generic/_helper.scss
+++ b/Ressources/Private/Sass/generic/_helper.scss
@@ -1,9 +1,11 @@
-// ==========================================================
-/* § /generic/helper.scss */
-//
-// Helper Classes from the boilerplate project
-// DOCS: http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
-// ==========================================================
+/*!
+ * Helper Classes from the boilerplate project
+ *
+ * @package t3b_frontend
+ * @path generic/_helper.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ * @link http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
+ */
 
 
 /* Quick floats */
