--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -1,13 +1,15 @@
-/*! ==========================================================
- * FrontEnd Base Version 1.1.6
- * Compiled on: #{timestamp()}
- * ========================================================== */
-// main.scss
-//
-// Merges all listed stylesheets and does the SASS & Compass magic
-// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#import
-// ==========================================================
 @charset "UTF-8";
+/*!
+ * Compiled on: #{timestamp()}
+ * Base stylesheet for this template-package
+ *
+ * @package t3b_frontend
+ * @path /main.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ * @version 1.1.6
+
+
+ */
 
 
 // =============================================================================
