--- a/Ressources/Private/Sass/objects/_chromeframe.scss
+++ b/Ressources/Private/Sass/objects/_chromeframe.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /objects/chromeframe.scss */
-//
-// Basic styling for Google's chromeframe
-// DOCS: https://developers.google.com/chrome/chrome-frame/
-// ==========================================================
+/*!
+ * Chromeframe object - Used for Google's Chromeframe project
+ *
+ * @package t3b_frontend
+ * @path objects/_chromeframe.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 // =============================================================================
