--- a/Ressources/Private/Sass/objects/_navigations.scss
+++ b/Ressources/Private/Sass/objects/_navigations.scss
@@ -1,9 +1,11 @@
-// ==========================================================
-/* § /objects/navigations.scss */
-//
-// Basic styling for all site-navigation elements
-// DOCS: http://csswizardry.com/2011/09/the-nav-abstraction/
-// ==========================================================
+/*!
+ * Navigation abstraction object
+ *
+ * @package t3b_frontend
+ * @path objects/_navigations.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ * @link http://csswizardry.com/2011/09/the-nav-abstraction/
+ */
 
 
 /* =============================================================================
