--- a/Ressources/Private/Sass/objects/_t3-general.scss
+++ b/Ressources/Private/Sass/objects/_t3-general.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /objects/t3-general.scss */
-//
-// Basic styling for typo3 generated elements and classes
-// DOCS:
-// ==========================================================
+/*!
+ * Styling for typo3 related classes
+ *
+ * @package t3b_frontend
+ * @path objects/_t3-general.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
