--- a/Ressources/Private/Sass/_settings/_all.scss
+++ b/Ressources/Private/Sass/_settings/_all.scss
@@ -1,8 +1,10 @@
-// ==========================================================
-// _settings.scss
 //
-// Merges all Settings needed
-// ==========================================================
+// Combines all SASS related settings into one @import
+//
+// @package t3b_frontend
+// @path  _settings/_all.sass
+// @author Tyll Weiß <t.weiss@exinit.de>
+//
 
 
 @import "_functions";             // SASS Functions
