--- a/Ressources/Private/Sass/base/_links.scss
+++ b/Ressources/Private/Sass/base/_links.scss
@@ -1,9 +1,10 @@
-// ==========================================================
-/* § /base/links.scss */
-//
-// Basic styling for links
-// DOCS:
-// ==========================================================
+/*!
+ * Basic styling for anchor tags
+ *
+ * @package t3b_frontend
+ * @path base/_links.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
