--- a/Ressources/Private/Sass/base/_typography.scss
+++ b/Ressources/Private/Sass/base/_typography.scss
@@ -1,9 +1,11 @@
-// ==========================================================
-/* § /base/typography.scss */
-//
-// Basic styling for typography elements
-// DOCS:
-// ==========================================================
+/*!
+ * Basic styling for all typographic related elements e.g.
+ * <b>, <sup>, <i> and so on
+ *
+ * @package t3b_frontend
+ * @path base/_typography.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ */
 
 
 /* =============================================================================
