--- a/Ressources/Private/Sass/generic/_debug.scss
+++ b/Ressources/Private/Sass/generic/_debug.scss
@@ -1,20 +1,21 @@
-// ==========================================================
-/* § /generic/debug.scss */
-//
-// Enable this stylesheet to visually detect any improperly nested or
-// potentially invalid markup, or any potentially inaccessible code.
-//
-// Red          ==      definite error
-// Yellow       ==      double-check
-// None         ==      should be fine
-//
-// This file is a shameless copy of the debug CSS File from inuit.css
-// https://github.com/csswizardry/inuit.css/
-//
-// ==========================================================
-
-
 @if $debug-mode == true{
+/*!
+ * This file is a shameless copy of the debug CSS File from inuit.css
+ *
+ * Enable this stylesheet to visually detect any improperly nested or
+ * potentially invalid markup, or any potentially inaccessible code.
+ *
+ * Red          ==      definite error
+ * Yellow       ==      double-check
+ * None         ==      should be fine
+ *
+ * @package t3b_frontend
+ * @path generic/debug.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ * @link https://github.com/csswizardry/inuit.css/
+ */
+
+
   /**
    * Are there any empty elements in your page?
    */
