--- a/Ressources/Private/Sass/generic/_print.scss
+++ b/Ressources/Private/Sass/generic/_print.scss
@@ -1,9 +1,11 @@
-// ==========================================================
-/* § /generic/print.scss */
-//
-// Inlined to avoid another HTTP connection
-// DOCS: h5bp.com/r
-// ==========================================================
+/*!
+ * Print styles - Inlined to avoid another HTTP connection
+ *
+ * @package t3b_frontend
+ * @path generic/_print.scss
+ * @author Tyll Weiß <t.weiss@exinit.de>
+ * @link http://h5bp.com/r
+ */
 
 
 @media print {
