Add a $package_name variable to quickly change the @package tag

--- a/Ressources/Private/Sass/_settings/_functions.scss
+++ b/Ressources/Private/Sass/_settings/_functions.scss
@@ -1,7 +1,7 @@
 //
 // SASS Functions
 //
-// @package t3b_frontend
+// @package #{$package_name()}
 // @path  _settings/_functions.sass
 // @author Tyll Weiß <t.weiss@exinit.de>
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#function_directives
