--- a/Ressources/Private/Sass/base/_base.scss
+++ b/Ressources/Private/Sass/base/_base.scss
@@ -1,7 +1,7 @@
 /*!
  * High-level wrapper elements, logos and CI related stuff
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path base/_base.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
