--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling for forms and inputs
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path base/_forms.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
