--- a/Ressources/Private/Sass/generic/_debug.scss
+++ b/Ressources/Private/Sass/generic/_debug.scss
@@ -9,7 +9,7 @@
  * Yellow       ==      double-check
  * None         ==      should be fine
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path generic/debug.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  * @link https://github.com/csswizardry/inuit.css/
