--- a/Ressources/Private/Sass/generic/_grid.scss
+++ b/Ressources/Private/Sass/generic/_grid.scss
@@ -1,7 +1,7 @@
 /*!
  * Gernerated- & Helper-classes for a column based grid
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path generic/_grid.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
