--- a/Ressources/Private/Sass/generic/_normalize.scss
+++ b/Ressources/Private/Sass/generic/_normalize.scss
@@ -8,7 +8,7 @@
 /*!
  * A cut-down version of normalize.css
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path generic/_normalize.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  * @link http://necolas.github.com/normalize.css/
