--- a/Ressources/Private/Sass/generic/_print.scss
+++ b/Ressources/Private/Sass/generic/_print.scss
@@ -1,7 +1,7 @@
 /*!
  * Print styles - Inlined to avoid another HTTP connection
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path generic/_print.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  * @link http://h5bp.com/r
