--- a/Ressources/Private/Sass/objects/_navigations.scss
+++ b/Ressources/Private/Sass/objects/_navigations.scss
@@ -1,7 +1,7 @@
 /*!
  * Navigation abstraction object
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path objects/_navigations.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  * @link http://csswizardry.com/2011/09/the-nav-abstraction/
