--- a/Ressources/Private/Sass/_settings/_all.scss
+++ b/Ressources/Private/Sass/_settings/_all.scss
@@ -1,7 +1,7 @@
 //
 // Combines all SASS related settings into one @import
 //
-// @package t3b_frontend
+// @package #{$package_name()}
 // @path  _settings/_all.sass
 // @author Tyll Weiß <t.weiss@exinit.de>
 //
