--- a/Ressources/Private/Sass/base/_headings.scss
+++ b/Ressources/Private/Sass/base/_headings.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling for headings and sub-headings
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path base/_headings.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
