--- a/Ressources/Private/Sass/base/_lists.scss
+++ b/Ressources/Private/Sass/base/_lists.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling for lists and definition elements
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path base/_lists.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
