--- a/Ressources/Private/Sass/base/_media.scss
+++ b/Ressources/Private/Sass/base/_media.scss
@@ -2,7 +2,7 @@
  * Basic styling for media elements e.g.
  * <img>, <video>, <svg>, <augio>
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path base/_media.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
