--- a/Ressources/Private/Sass/base/_tables.scss
+++ b/Ressources/Private/Sass/base/_tables.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling and extended classes for tables
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path base/_tables.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
