--- a/Ressources/Private/Sass/base/_typography.scss
+++ b/Ressources/Private/Sass/base/_typography.scss
@@ -2,7 +2,7 @@
  * Basic styling for all typographic related elements e.g.
  * <b>, <sup>, <i> and so on
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path base/_typography.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
