--- a/Ressources/Private/Sass/generic/_helper.scss
+++ b/Ressources/Private/Sass/generic/_helper.scss
@@ -1,7 +1,7 @@
 /*!
  * Helper Classes from the boilerplate project
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path generic/_helper.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  * @link http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
