--- a/Ressources/Private/Sass/objects/_chromeframe.scss
+++ b/Ressources/Private/Sass/objects/_chromeframe.scss
@@ -1,7 +1,7 @@
 /*!
  * Chromeframe object - Used for Google's Chromeframe project
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path objects/_chromeframe.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
