--- a/Ressources/Private/Sass/objects/_t3-general.scss
+++ b/Ressources/Private/Sass/objects/_t3-general.scss
@@ -1,7 +1,7 @@
 /*!
  * Styling for typo3 related classes
  *
- * @package t3b_frontend
+ * @package #{$package_name()}
  * @path objects/_t3-general.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
  */
