Missing var name for the @package tag

--- a/Ressources/Private/Sass/_settings/_mixins.scss
+++ b/Ressources/Private/Sass/_settings/_mixins.scss
@@ -1,7 +1,7 @@
 //
 // SASS Mixins
 //
-// @package nk_common
+// @package #{$package_name()}
 // @path settings/_mixins.scss
 // @author Tyll Weiß <t.weiss@exinit.de>
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#mixins
