--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -1,7 +1,7 @@
 //
 // Variables, variables, variables!
 //
-// @package nk_common
+// @package #{$package_name()}
 // @path settings/_variables.sass
 // @author Tyll Weiß <t.weiss@exinit.de>
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
