Remove the :link scope in some _navigations.scss and _forms.scss

--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -95,8 +95,7 @@ input[type="submit"] {
 .btn {
   @extend %btn;
   @extend %inline-block;
-  &:link {
-    /* Fixes the color setting as a:link is in a higher priority */
+  & {
     color: color-adjust($cd-primary, 100%);
     &:hover {
       text-decoration: none;
