--- a/Ressources/Private/Sass/objects/_navigations.scss
+++ b/Ressources/Private/Sass/objects/_navigations.scss
@@ -57,13 +57,13 @@ $ Navigations
 /* ======================== Main Navigation ========================= */
 /*.nav*/.site-nav {
   li { }
-  a:link { }
+  a { }
   .active a { }
 }
 
 /* ======================== Footer Navigation ======================== */
 /*.nav*/.footer-nav {
   li { }
-  a:link { }
+  a { }
   .active a { }
 }
