Remove the inline-block placeholder
As it destroys the module pattern, and is generally a confusing part of
this package. If someone is in need for a cross-browser inline-block
fix you should use the compass @mixin.

--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -94,7 +94,11 @@ input[type="submit"] {
 }
 .btn {
   @extend %btn;
-  @extend %inline-block;
+  display: inline-block;
+  @if $oldIE == true {
+    *display: inline;
+    *zoom: 1;
+  }
   & {
     color: color-adjust($cd-primary, 100%);
     &:hover {
