Fix the author tag in _normalize.scss and _debug.scss

--- a/Ressources/Private/Sass/generic/_debug.scss
+++ b/Ressources/Private/Sass/generic/_debug.scss
@@ -11,7 +11,7 @@
  *
  * @package #{$package_name()}
  * @path generic/debug.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Harry Roberts
  * @link https://github.com/csswizardry/inuit.css/
  */
 
