--- a/Ressources/Private/Sass/generic/_normalize.scss
+++ b/Ressources/Private/Sass/generic/_normalize.scss
@@ -10,7 +10,7 @@
  *
  * @package #{$package_name()}
  * @path generic/_normalize.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Nicolas Gallagher
  * @link http://necolas.github.com/normalize.css/
  */
 
