--- a/Ressources/Private/Sass/generic/_normalize.scss
+++ b/Ressources/Private/Sass/generic/_normalize.scss
@@ -5,6 +5,21 @@
 //   @include viewport($width: device-width, $zoom: 1, $orientation: '', $user-zoom: '');
 // }
 
+@if $setBorder-Box == true {
+  * {
+    @include box-sizing(border-box);
+    @if $oldIE == true {
+      /* Cross browser Border-box
+       *
+       * Includes boxsizing.htc behavior for IE7 and below
+       * The URL has to be relative to the HTML Doc
+       * https://github.com/Schepp/box-sizing-polyfill
+       */
+      *behavior: url('#{$templatePath}Ressource/Public/boxsizing.htc');
+    }
+  }
+}
+
 /*!
  * A cut-down version of normalize.css
  *
