Enable box-sizing: border-box; by default

--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -23,7 +23,7 @@ $templatePath:          "typo3conf/ext/#{$package_name}/"; // Relative to the ht
 $oldIE:                 false;   // If set to 'false' IE6 & IE7 Hacks will be ignored while compiling
 $direction:             ltr;    // set "dir" attribute in HTML to "ltr" (default) or "rtl"
 $debug-mode:            false;  // If set to 'true' a basic markup check via CSS will be injected
-$setBorder-Box:         false;  // If set to 'true' the css layout mode will be 'border-box'
+$setBorder-Box:         true;  // If set to 'true' the css layout mode will be 'border-box'
 
 
 // =============================================================================
